crawler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: "synergychat-crawler"
  labels:
    app: "synergychat-crawler"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "synergychat-crawler"
  template:
    metadata: 
      labels:
        app: "synergychat-crawler"
    spec:
      containers:
        - name: "synergychat-crawler"
          image: "bootdotdev/synergychat-crawler:latest"
          volumeMounts:
            - name: cache-volume
              mountPath: /cache      
        - name: "synergychat-crawler2"
          image: "bootdotdev/synergychat-crawler:latest"
          volumeMounts:
            - name: cache-volume
              mountPath: /cache   
        - name: "synergychat-crawler3"
          image: "bootdotdev/synergychat-crawler:latest"
          volumeMounts:
            - name: cache-volume
              mountPath: /cache               
      volumes:
        - name: cache-volume
          emptyDir: {}
