web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"1"},"creationTimestamp":"2025-12-30T21:24:46Z","generation":7,"labels":{"app":"synergychat-web"},"name":"synergychat-web","namespace":"default","resourceVersion":"77164","uid":"91caa6cb-5225-4b5a-b7b4-76062a80c70b"},"spec":{"progressDeadlineSeconds":600,"replicas":3,"revisionHistoryLimit":10,"selector":{"matchLabels":{"app":"synergychat-web"}},"strategy":{"rollingUpdate":{"maxSurge": [...]
  creationTimestamp: "2025-12-30T21:24:46Z"
  generation: 8
  labels:
    app: synergychat-web
  name: synergychat-web
  namespace: default
  resourceVersion: "132465"
  uid: 91caa6cb-5225-4b5a-b7b4-76062a80c70b
spec:
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: synergychat-web
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: synergychat-web
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: synergychat-web-configmap
        image: docker.io/bootdotdev/synergychat-web:latest
        imagePullPolicy: Always
        name: synergychat-web
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 3
  conditions:
  - lastTransitionTime: "2025-12-30T21:24:46Z"
    lastUpdateTime: "2026-01-02T15:06:56Z"
    message: ReplicaSet "synergychat-web-644b5c88bf" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2026-01-05T16:08:09Z"
    lastUpdateTime: "2026-01-05T16:08:09Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 8
  readyReplicas: 3
  replicas: 3
  updatedReplicas: 3
