web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: "synergychat-web"
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
